--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <body>
 
 	<div class="title">
-		<img src="img/intro.png" alt="">
+		<img src="img/intro.png" alt="WUHUUU You now see the intro part">
 	</div>
 
-	<button>Start</button>
-
+	<button id="startButton">Start</button>
 
 	<div class="mainframe">
-		<img src="img/background-01.png" alt="">
+		<img src="img/background-01.png" alt="There should have been a image here">
 	</div>
 
 
