--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	</div>
 
 
-<audio  preload="auto" id="intro" >	<source src="intro-music.mp3" type="audio/mpeg">
+<audio  preload="auto" id="intro" autoplay loop>
+	<source src="intro-music.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
