YAAAAAAAAAAAAAAAAAAAAY! It's working :D

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 
-	<div class="title">
+	<div class="startButton">
 		<img src="img/intro.png" alt="WUHUUU You now see the intro part">
+
+		<button class="startButton">Start</button>
+
 	</div>
 
-	<button id="startButton">Start</button>
+
 
 	<div class="mainframe">
 		<img src="img/background-01.png" alt="There should have been a image here">
