--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 	Your browser does not support the audio element
 </audio>
 
+<audio  preload="auto" id="wind" loop>
+	<source src="wind.mp3" type="audio/mpeg">
+	Your browser does not support the audio element
+</audio>
+
 <script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
