--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<img src="img/background-01.png" alt="There should have been a image here">
 	</div>
 
+	<div class="prex"></div>
+
 
 <audio  preload="auto" id="intro" autoplay loop>
 	<source src="intro-music.mp3" type="audio/mpeg">
