--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
 
 	<div class="prex"></div>
 
+	<div class="prexFront"></div>
+
 
 <audio  preload="auto" id="intro" autoplay loop>
 	<source src="intro-music.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
-<audio  preload="auto" id="wind" loop>
+<audio  preload="auto" id="wind">
 	<source src="wind.mp3" type="audio/mpeg">
+	Your browser does not support the audio element
+</audio>
+
+<audio  preload="auto" id="snow">
+	<source src="snow.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
