--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
 	<div class="prexFront"></div>
 
+	<div class="prexhelmet"></div>
+
+	<div class="flying"></div>
+
 
 <audio  preload="auto" id="intro" autoplay loop>
 	<source src="intro-music.mp3" type="audio/mpeg">
