--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 	<div class="flying"></div>
 
+	<div class="ballons"></div>
+
 
 <audio  preload="auto" id="intro" autoplay loop>
 	<source src="intro-music.mp3" type="audio/mpeg">
