--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 
 	<div class="ballons"></div>
 
+	<div class="credit"></div>
+
 
 <audio  preload="auto" id="intro" autoplay loop>
 	<source src="intro-music.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
-<audio  preload="auto" id="wind">
+<audio  preload="auto" id="wind" loop>
 	<source src="wind.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
