--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
 	<div class="ballons"></div>
 
-	<div class="credit"></div>
+	<div class="credit">
+		<img src="img/credits.png" alt="and the credit goes to... ">
+		<button class="goToPDF">PDF</button>
+	</div>
 
 
 <audio  preload="auto" id="intro" autoplay loop>
