--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 	Your browser does not support the audio element
 </audio>
 
+<audio  preload="auto" id="heartbeat">
+	<source src="heartbeat.wav" type="audio/mpeg">
+	Your browser does not support the audio element
+</audio>
+
 <script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
