--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 
 	</div>
 
-
+	<h1>Click on p-rex to make him move</h1>
 
 	<div class="mainframe">
 		<img src="img/background-01.png" alt="There should have been a image here">
 	</div>
+
+	<div><img class="bully1" src="img/bully-penguin_one.png" alt="and the credit goes to... "></div>
+
+	<div><img class="bully2" src="img/bully-penguin-two.png" alt="and the credit goes to... "></div>
 
 	<div class="prex"></div>
 
@@ -29,33 +33,48 @@
 
 	<div class="flying"></div>
 
+	<button class="safeButton">Safe P-rex</button>
+
 	<div class="ballons"></div>
 
 	<div class="credit">
 		<img src="img/credits.png" alt="and the credit goes to... ">
-		<button class="goToPDF">PDF</button>
+		<button onclick="visitPage();" target="_blank">PDF</button>
 	</div>
 
 
 <audio  preload="auto" id="intro" autoplay loop>
-	<source src="intro-music.mp3" type="audio/mpeg">
+	<source src="audio/intro-music.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
 <audio  preload="auto" id="wind" loop>
-	<source src="wind.mp3" type="audio/mpeg">
+	<source src="audio/wind.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
 <audio  preload="auto" id="snow">
-	<source src="snow.mp3" type="audio/mpeg">
+	<source src="audio/snow.mp3" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
 
 <audio  preload="auto" id="heartbeat">
-	<source src="heartbeat.wav" type="audio/mpeg">
+	<source src="audio/heartbeat.wav" type="audio/mpeg">
 	Your browser does not support the audio element
 </audio>
+
+<audio  preload="auto" id="jump">
+	<source src="audio/jump.wav" type="audio/mpeg">
+	Your browser does not support the audio element
+</audio>
+
+<audio  preload="auto" id="fall">
+	<source src="audio/fall.wav" type="audio/mpeg">
+	Your browser does not support the audio element
+</audio>
+
+
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
 <script src="script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
