--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<button class="startButton">Start</button>
 
 	</div>
-
-	<h1>Click on p-rex to make him move</h1>
+	<div class="clickText">
+	<h1>Click on p-rex to help him</h1>
+	</div>
 
 	<div class="mainframe">
 		<img src="img/background-01.png" alt="There should have been a image here">
