--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	</div>
 	<div class="clickText">
-	<h1>Click on p-rex to help him</h1>
+	<h1>click on p-rex to help him fly</h1>
 	</div>
 
 	<div class="mainframe">
@@ -34,7 +34,7 @@
 
 	<div class="flying"></div>
 
-	<button class="safeButton">Safe P-rex</button>
+	<button class="safeButton">Save P-rex</button>
 
 	<div class="ballons"></div>
 
